--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             </div>
         </footer>
     </div>
-    <script scr="myScript.js></script>
+    <script scr="main.js></script>
 </body>
 
 </html>
+
