--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="images/carlogo.jpg" />
 </head>
-<script scr="main.js></script>
+<script scr="main.js>/script>
 <body>
     <div id="page-grid">
         <header>
@@ -63,5 +63,6 @@
 </body>
 
 </html>
+
 
 
