--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
             </div>
         </footer>
     </div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
+
 
 
 
