--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
         </footer>
     </div>
     <script src="main.js"></script>
+    <script src="data/content.js"></script>
 </body>
 
 </html>
+
 
 
 
