--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <footer>
             </footer>
     </div>
-    
+    <div id="car-list"></div>
     <script src="data/content.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
