--- a/index.html
+++ b/index.html
@@ -3,23 +3,140 @@
 <head>
   <meta charset="UTF-8">
   <title>JDM Legends</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Use a nice font for the header, e.g., 'Roboto', italic -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #ffeedd;
+      /* For fallback only, real background image uses .bg-img */
+    }
+    .bg-img {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 50vh;
+      object-fit: cover;
+      z-index: -1;
+    }
+    h1 {
+      font-family: 'Roboto', Arial, sans-serif;
+      font-size: 4em;
+      font-style: italic;
+      color: #b22222;
+      text-align: center;
+      margin: 0.1em 0 0.3em 0;
+      background: #ffeedd;
+      border-top: 4px solid #000;
+      border-bottom: 4px solid #000;
+      letter-spacing: 2px;
+      padding: 0.2em 0;
+    }
+    #main-bar {
+      background: #ffeedd;
+      display: flex;
+      justify-content: center;
+      gap: 2em;
+      border-bottom: 2px solid #000;
+      padding: 1em 0;
+      margin-bottom: 1em;
+      position: relative;
+      z-index: 1;
+    }
+    .contact-box, .social-box {
+      border: 2px solid #000;
+      padding: 0.5em 1em;
+      background: #fff;
+      border-radius: 8px;
+      font-size: 1.1em;
+    }
+    .social-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.6em;
+    }
+    #car-list {
+      margin: 2em auto;
+      max-width: 900px;
+      position: relative;
+      z-index: 2;
+    }
+    #car-list .car-card {
+      margin-bottom: 2em;
+      background: #fff;
+      border-radius: 12px;
+      padding: 1em;
+      box-shadow: 0 2px 8px #ccc;
+      display: flex;
+      align-items: flex-start;
+      gap: 2em;
+    }
+    #car-list img {
+      max-width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 1px 6px #aaa;
+    }
+    #car-list h2 {
+      margin-top: 0;
+      color: #a00;
+      font-family: 'Roboto', Arial, sans-serif;
+      font-style: italic;
+    }
+    #car-list p {
+      margin-bottom: 0;
+      font-size: 1.1em;
+    }
+    @media (max-width: 700px) {
+      h1 { font-size: 2em; }
+      #car-list .car-card { flex-direction: column; align-items: center; }
+      #car-list img { max-width: 90vw; }
+    }
+  </style>
 </head>
 <body>
+  <!-- Background image -->
+  <img class="bg-img" src="images/background.jpg" alt="Background image">
   <h1>JDM Legends</h1>
+  <div id="main-bar">
+    <div class="contact-box">
+      <div>Email: <a id="email-link" href="#">Email</a></div>
+      <div>Phone: <span id="phone-txt"></span></div>
+    </div>
+    <div class="social-box">
+      <span>Socials:</span>
+      <img id="social-img" src="" alt="" style="max-width:120px;">
+    </div>
+  </div>
   <div id="car-list"></div>
+  
   <script src="data/content.js"></script>
   <script>
-    // Check if cars is loaded
-    console.log(cars);
+    // Contact info
+    document.getElementById('email-link').textContent = contact.email;
+    document.getElementById('email-link').href = "mailto:" + contact.email;
+    document.getElementById('phone-txt').textContent = contact.phone;
 
-    // Render cars and images
+    // Social image
+    const socialImg = document.getElementById('social-img');
+    socialImg.src = socialImage.imageUrl;
+    socialImg.alt = socialImage.altText;
+
+    // Cars
     const carList = document.getElementById('car-list');
     cars.forEach(car => {
       const carDiv = document.createElement('div');
+      carDiv.className = "car-card";
       carDiv.innerHTML = `
-        <h2>${car.name}</h2>
-        <img src="${car.imageUrl}" alt="${car.altText}" style="max-width:300px;">
-        <p>${car.description}</p>
+        <img src="${car.imageUrl}" alt="${car.altText}">
+        <div>
+          <h2>${car.name}</h2>
+          <p>${car.description}</p>
+        </div>
       `;
       carList.appendChild(carDiv);
     });
