--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #ffeedd;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-    .bg-img {
-      position: fixed;
-      top: 0;
-      left: 0;
+    .hero-section {
       width: 100vw;
-      height: 50vh;
+      height: 40vh;
+      overflow: hidden;
+      position: relative;
+      background: #ffeedd;
+      border-bottom: 4px solid #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .hero-img {
+      width: 100vw;
+      height: 100%;
       object-fit: cover;
-      z-index: -1;
+      display: block;
     }
     h1 {
       font-family: 'Roboto', Arial, sans-serif;
@@ -27,42 +38,18 @@
       font-style: italic;
       color: #b22222;
       text-align: center;
-      margin: 0.1em 0 0.3em 0;
+      margin: 0.2em 0 0.3em 0;
       background: #ffeedd;
-      border-top: 4px solid #000;
-      border-bottom: 4px solid #000;
       letter-spacing: 2px;
-      padding: 0.2em 0;
-    }
-    #main-bar {
-      background: #ffeedd;
-      display: flex;
-      justify-content: center;
-      gap: 2em;
-      border-bottom: 2px solid #000;
-      padding: 1em 0;
-      margin-bottom: 1em;
-      position: relative;
-      z-index: 1;
-    }
-    .contact-box, .social-box {
-      border: 2px solid #000;
-      padding: 0.5em 1em;
-      background: #fff;
-      border-radius: 8px;
-      font-size: 1.1em;
-    }
-    .social-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.6em;
-    }
-    #car-list {
-      margin: 2em auto;
-      max-width: 900px;
+      padding: 0.1em 0;
       position: relative;
       z-index: 2;
+    }
+    #car-list {
+      margin: 2em auto 2em auto;
+      max-width: 900px;
+      width: 90vw;
+      flex: 1;
     }
     #car-list .car-card {
       margin-bottom: 2em;
@@ -89,28 +76,60 @@
       margin-bottom: 0;
       font-size: 1.1em;
     }
+    footer {
+      width: 100vw;
+      background: #ffeedd;
+      border-top: 4px solid #000;
+      padding: 2em 0 2em 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 3em;
+      align-items: flex-end;
+      position: relative;
+      z-index: 3;
+    }
+    .contact-box, .social-box {
+      border: 2px solid #000;
+      padding: 1em 2em;
+      background: #fff;
+      border-radius: 8px;
+      font-size: 1.1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-width: 220px;
+      gap: 0.5em;
+    }
+    .social-box img {
+      max-width: 120px;
+    }
     @media (max-width: 700px) {
       h1 { font-size: 2em; }
       #car-list .car-card { flex-direction: column; align-items: center; }
       #car-list img { max-width: 90vw; }
+      footer { flex-direction: column; gap: 1em; padding: 1em 0;}
+      .contact-box, .social-box { min-width: unset; padding: 1em;}
+      .hero-section { height: 25vh; }
     }
   </style>
 </head>
 <body>
-  <!-- Background image -->
-  <img class="bg-img" src="images/background.jpg" alt="Background image">
+  <div class="hero-section">
+    <img class="hero-img" src="images/background.jpg" alt="Background image">
+  </div>
   <h1>JDM Legends</h1>
-  <div id="main-bar">
+  <div id="car-list"></div>
+  <footer>
     <div class="contact-box">
       <div>Email: <a id="email-link" href="#">Email</a></div>
       <div>Phone: <span id="phone-txt"></span></div>
     </div>
     <div class="social-box">
       <span>Socials:</span>
-      <img id="social-img" src="" alt="" style="max-width:120px;">
+      <img id="social-img" src="" alt="">
     </div>
-  </div>
-  <div id="car-list"></div>
+  </footer>
   
   <script src="data/content.js"></script>
   <script>
