--- a/index.html
+++ b/index.html
@@ -1,52 +1,81 @@
+﻿<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>JDM Legends</title>
-  <style>
-    body { font-family: Arial, sans-serif; }
-    #car-list div { margin-bottom: 2em; }
-    #car-list img { max-width: 300px; display: block; margin-bottom: 0.5em; }
-    #contact { margin-top: 2em; }
-    #social { margin-top: 2em; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jdm legends</title>
+    <title>JDM Legends (Template)</title>
+<link rel="stylesheet" href="styles.css" />
+<link rel="icon" type="image/png" href="images/carlogo.jpg" />
 </head>
-<body>
-  <h1>Legendary JDM Cars</h1>
-  <div id="car-list"></div>
+@@ -17,58 +17,23 @@ <h1>JDM Legends</h1>
+</header>
 
-  <div id="contact"></div>
-  <div id="social"></div>
+<main>
+            <section class="car-section">
+                <h2 class="section-title">Skyline</h2>
+                <div class="car-content-grid">
+                    <img src="images/skyline.jpg" alt="Nissan Skyline GT-R R34" class="car-image" />
+                    <p class="section-text">
+                        Nissan Skyline GT-R R34 (1999–2002). Advanced for its time, with the RB26DETT twin-turbo inline-6, ATTESA all-wheel drive, and Super-HICAS four-wheel steering. A balance of tech and raw performance, nicknamed “Godzilla” for dominating motorsports and street culture.
+                    </p>
+                </div>
+            </section>
 
-  <!-- Load your data JS file first -->
-  <script src="data/content.js"></script>
-  <script>
-    // Render cars
-    const carList = document.getElementById('car-list');
-    cars.forEach(car => {
-      const carDiv = document.createElement('div');
-      carDiv.innerHTML = `
-        <h2>${car.name}</h2>
-        <img src="${car.imageUrl}" alt="${car.altText}">
-        <p>${car.description}</p>
-      `;
-      carList.appendChild(carDiv);
-    });
+            <section class="car-section">
+                <h2 class="section-title">Supra</h2>
+                <div class="car-content-grid">
+                    <img src="images/supra.avif" alt="Toyota Supra MK4" class="car-image" />
+                    <p class="section-text">
+                        Toyota Supra MK4 (A80, 1993–2002). Legendary Japanese sports car, famous for its 2JZ-GTE twin-turbo inline-6, incredible tuning potential, and sleek ‘90s styling. Became an icon through Fast & Furious and is considered one of the most capable tuner cars ever built.
+                    </p>
+                </div>
+            </section>
 
-    // Render contact info
-    const contactDiv = document.getElementById('contact');
-    contactDiv.innerHTML = `
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:${contact.email}">${contact.email}</a></p>
-      <p>Phone: ${contact.phone}</p>
-    `;
+            <section class="car-section">
+                <h2 class="section-title">RX-7</h2>
+                <div class="car-content-grid">
+                    <img src="images/rx7.jpg" alt="Mazda RX-7 FD3S" class="car-image" />
+                    <p class="section-text">
+                        Mazda RX-7 (FD3S, 1992–2002). Lightweight, agile sports car powered by the unique 13B-REW twin-turbo rotary engine. Known for razor-sharp handling, distinctive looks with pop-up headlights, and its high-revving, smooth rotary performance.
+                    </p>
+                </div>
+            </section>
+</main>
 
-    // Render social image
-    const socialDiv = document.getElementById('social');
-    socialDiv.innerHTML = `
-      <h2>Follow Us</h2>
-      <img src="${socialImage.imageUrl}" alt="${socialImage.altText}" style="max-width:200px;">
-    `;
-  </script>
+<footer>
+            <div class="contact-info">
+                <p>Email: turciosg@cua.edu</p>
+                <p>Phone: 202-569-5702</p>
+            </div>
+            <div class="social-links">
+                <p>Socials:</p>
+                <img src="images/social-media.jpg" alt="Social media icons" class="social-icon" />
+            </div>
+</footer>
+</div>
+    <script src="main.js"></script>
+
+    <template id="car-template">
+        <section class="car-section">
+            <h2 class="section-title"></h2> 
+            <div class="car-content-grid">
+                <img src="" alt="" class="car-image" /> 
+                <p class="section-text"></p>
+            </div>
+        </section>
+    </template>
+
+<script src="data/content.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
+
+
+
+
+
+
+
