--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         </section>
     </template>
 
+    <button id="myButton">Click Me</button>
+    <p id="message"></p>
+
+
     <script src="data/content.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
