--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
             </div>
         </header>
 
-        <main>
+        
+            <div class="container">
+                <div class="layout">
+                    <main>
+                        <section id="gallery" class="selecton">
+                        </section>section>
+                        <div id="modal" class"modal modal--hidden">
+                            <div class="moal-wrapper">
+                                <div class"modal-container">
+                                    <div class"modal-header">
+                                        Modal Header
+                                        <button id="modal-close">Close</button>butt
+                                    </div>
+                                    <div class="modal-body">
+                                        Modal Body
+                                    </div>
+                                    <div class="modal-footer">
+                                        Modal Footer
+                                    </div>
+                                    </div>
+                                </div>
+                            </div>
+                                    
+                    </main>
         </main>
 
         <footer>
@@ -41,4 +64,5 @@
     <script src="main.js"></script>
 </body>
 </html>
+
 
