--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
                                     </div>
                                 </div>
                             </div>
-                                    
+                                   <button id="run">Run</button>
+<table>
+  <thead>
+    <tr>
+      <th>Previous</th>
+      <th>This</th>
+      <th>Actual delay</th>
+    </tr>
+  </thead>
+  <tbody id="log"></tbody>
+</table> 
                     </main>
         </main>
 
@@ -64,5 +74,6 @@
     <script src="main.js"></script>
 </body>
 </html>
+
 
 
