--- a/index.html
+++ b/index.html
@@ -70,11 +70,22 @@
     <button id="myButton">Click Me</button>
     <p id="message"></p>
 
+                    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GA_MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'YOUR_GA_MEASUREMENT_ID');
+    </script>
+
 
     <script src="data/content.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
