--- a/index.html
+++ b/index.html
@@ -1,107 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JDM Legends (Template)</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jdm legends</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="images/carlogo.jpg" />
 </head>
 
 <body>
-  <div id="page-grid">
-    <header>
-      <div class="brand-identity">
-        <h1>JDM Legends</h1>
-      </div>
-    </header>
-
-    <main>
-      <section id="gallery" class="selection">
-        <!-- gallery content -->
-      </section>
-
-      <!-- Trigger button to open modal -->
-      <button id="modal-open" class="btn">Open Modal</button>
-
-      <!-- Modal (hidden by default via class) -->
-      <div id="modal" class="modal modal--hidden" role="dialog" aria-hidden="true" aria-labelledby="modal-title">
-        <div class="modal-wrapper">
-          <div class="modal-container" role="document" aria-modal="true">
-            <header class="modal-header">
-              <h2 id="modal-title">Modal Header</h2>
-              <button id="modal-close" class="modal-close" aria-label="Close modal">×</button>
-            </header>
-            <div class="modal-body">
-              <p>This is the modal body.</p>
-              <p>You can put any content here (form, details, images, etc.).</p>
+    <div id="page-grid">
+        <header>
+            <div class="brand-identity">
+                <h1>JDM Legends</h1>
             </div>
-            <footer class="modal-footer">
-              <button id="modal-ok" class="btn">OK</button>
-            </footer>
-          </div>
-        </div>
-      </div>
+        </header>
 
-    </main>
+        <main>
+            <section class="car-section">
+                <h2 class="section-title">Skyline</h2>
+                <div class="car-content-grid">
+                    <img src="images/skyline.jpg" alt="Nissan Skyline GT-R R34" class="car-image" />
+                    <p class="section-text">
+                        Nissan Skyline GT-R R34 (1999–2002). Advanced for its time, with the RB26DETT twin-turbo inline-6, ATTESA all-wheel drive, and Super-HICAS four-wheel steering. A balance of tech and raw performance, nicknamed “Godzilla” for dominating motorsports and street culture.
+                    </p>
+                </div>
+            </section>
 
-    <footer>
-      <!-- Contact box moved to footer -->
-      <section id="contact-box" class="contact-box">
-        <h3>Contact</h3>
-        <form id="contact-form">
-          <label>
-            Email
-            <input type="email" id="contact-email" name="email" placeholder="you@example.com" required>
-          </label>
-          <label>
-            Phone
-            <input type="tel" id="contact-phone" name="phone" placeholder="+1 555 555 5555">
-          </label>
-          <label>
-            Message
-            <textarea id="contact-message" name="message" rows="3" placeholder="Your message"></textarea>
-          </label>
-          <div class="contact-actions">
-            <button type="submit" class="btn">Send</button>
-            <button type="button" id="contact-open-modal" class="btn alt">Open Modal</button>
-          </div>
-        </form>
-        <div id="contact-status" class="contact-status" aria-live="polite"></div>
-      </section>
+            <section class="car-section">
+                <h2 class="section-title">Supra</h2>
+                <div class="car-content-grid">
+                    <img src="images/supra.avif" alt="Toyota Supra MK4" class="car-image" />
+                    <p class="section-text">
+                        Toyota Supra MK4 (A80, 1993–2002). Legendary Japanese sports car, famous for its 2JZ-GTE twin-turbo inline-6, incredible tuning potential, and sleek ‘90s styling. Became an icon through Fast & Furious and is considered one of the most capable tuner cars ever built.
+                    </p>
+                </div>
+            </section>
 
-      <!-- Run/demo table -->
-      <div class="run-area">
-        <button id="run" class="btn">Run</button>
+            <section class="car-section">
+                <h2 class="section-title">RX-7</h2>
+                <div class="car-content-grid">
+                    <img src="images/rx7.jpg" alt="Mazda RX-7 FD3S" class="car-image" />
+                    <p class="section-text">
+                        Mazda RX-7 (FD3S, 1992–2002). Lightweight, agile sports car powered by the unique 13B-REW twin-turbo rotary engine. Known for razor-sharp handling, distinctive looks with pop-up headlights, and its high-revving, smooth rotary performance.
+                    </p>
+                </div>
+            </section>
+        </main>
 
-        <table>
-          <thead>
-            <tr>
-              <th>Previous</th>
-              <th>This</th>
-              <th>Actual delay (ms)</th>
-            </tr>
-          </thead>
-          <tbody id="log"></tbody>
-        </table>
-      </div>
-    </footer>
-  </div>
-
-  <template id="car-template">
-    <section class="car-section">
-      <h2 class="section-title"></h2>
-      <div class="car-content-grid">
-        <img src="" alt="" class="car-image" />
-        <p class="section-text"></p>
-      </div>
-    </section>
-  </template>
-
-  <!-- Click me button and message -->
-  <button id="myButton" class="btn">Click Me</button>
-  <p id="message" class="hidden" aria-live="polite"></p>
-
-  <script src="data/content.js"></script>
-  <script src="main.js"></script>
+        <footer>
+            <div class="contact-info">
+                <p>Email: turciosg@cua.edu</p>
+                <p>Phone: 202-569-5702</p>
+            </div>
+            <div class="social-links">
+                <p>Socials:</p>
+                <img src="images/social-media.jpg" alt="Social media icons" class="social-icon" />
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
