--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>jdm legends</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="images/carlogo.jpg" />
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RJSQ7F47VJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RJSQ7F47VJ');
+</script>
+    
 </head>
 
 <body>
@@ -61,3 +72,4 @@
     </div>
 </body>
 </html>
+
