--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="car-content-grid">
                     <img src="images/skyline.jpg" alt="Nissan Skyline GT-R R34" class="car-image" />
                     <p class="section-text">
-                        Nissan Skyline GT-R R34 (1999–2002). Advanced for its time, with the RB26DETT twin-turbo inline-6, ATTESA all-wheel drive, and Super-HICAS four-wheel steering. A balance of t[...]
+                        Nissan Skyline GT-R R34 (1999–2002). Advanced for its time, with the RB26DETT twin-turbo inline-6, ATTESA all-wheel drive, and Super-HICAS four-wheel steering. A balance of tech and raw performance, nicknamed “Godzilla” for dominating motorsports and street culture.
                     </p>
                 </div>
             </section>
@@ -42,7 +42,7 @@
                 <div class="car-content-grid">
                     <img src="images/supra.avif" alt="Toyota Supra MK4" class="car-image" />
                     <p class="section-text">
-                        Toyota Supra MK4 (A80, 1993–2002). Legendary Japanese sports car, famous for its 2JZ-GTE twin-turbo inline-6, incredible tuning potential, and sleek ‘90s styling. Became an[...]
+                        Toyota Supra MK4 (A80, 1993–2002). Legendary Japanese sports car, famous for its 2JZ-GTE twin-turbo inline-6, incredible tuning potential, and sleek ‘90s styling. Became an icon through Fast & Furious and is considered one of the most capable tuner cars ever built.
                     </p>
                 </div>
             </section>
@@ -52,7 +52,7 @@
                 <div class="car-content-grid">
                     <img src="images/rx7.jpg" alt="Mazda RX-7 FD3S" class="car-image" />
                     <p class="section-text">
-                        Mazda RX-7 (FD3S, 1992–2002). Lightweight, agile sports car powered by the unique 13B-REW twin-turbo rotary engine. Known for razor-sharp handling, distinctive looks with pop[...]
+                        Mazda RX-7 (FD3S, 1992–2002). Lightweight, agile sports car powered by the unique 13B-REW twin-turbo rotary engine. Known for razor-sharp handling, distinctive looks with pop-up headlights, and its high-revving, smooth rotary performance.
                     </p>
                 </div>
             </section>
@@ -71,3 +71,4 @@
     </div>
 </body>
 </html>
+
