--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     </div>
 
     <script src="main.js"></script>
-    <script src="content.js"></script>
+    <script src="data/content.js"></script>
+
 </body>
 </html>
+
