--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>Email: turciosg@cua.edu</p>
                 <p>Phone: 202-569-5702</p>
 
-                <!-- SIMPLE BEGINNER BUTTON -->
+              
                 <button id="open-modal-btn" class="btn">Click me</button>
             </div>
 
@@ -84,8 +84,8 @@
     <!-- SIMPLE MODAL -->
     <div id="modal" class="modal">
         <div class="modal-box">
-            <h3>Modal Box</h3>
-            <p>This is a modal box. Click the Close button or click outside to close it.</p>
+            <h3>Thank You!</h3>
+            <p>This is a demo. Click the Close button or click outside to close it.</p>
             <button id="close-modal-btn" class="btn btn--secondary">Close</button>
         </div>
     </div>
@@ -96,5 +96,6 @@
 
 </body>
 </html>
+
 
 
