--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div id="modal" class="modal">
         <div class="modal-box">
             <h3>Thank You!</h3>
-            <p>This is a demo. Click the Close button or click outside to close it.</p>
+            <p>This is a demo. Click the Close button to close the window</p>
             <button id="close-modal-btn" class="btn btn--secondary">Close</button>
         </div>
     </div>
@@ -96,6 +96,7 @@
 
 </body>
 </html>
+
 
 
 
